--- a/banquetBuddy/catering_owners/templates/offers/edit_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/edit_offer.html
@@ -1,8 +1,13 @@
 {% extends 'core/base.html' %}
+
 {% load static %}
 
 {% block content %}
 <style>
+    .error {
+        border-color: red;
+    }
+
     form {
         margin: 10%;
     }
@@ -37,6 +42,15 @@
         background-color: #0056b3;
     }
 </style>
+{% if form.non_field_errors %}
+    <div class="errors">
+        {% for error in form.non_field_errors %}
+            <p style="color: red;">{{ error }}</p>
+        {% endfor %}
+    </div>
+{% endif %}
+
+
 <h1>Edit Job Offer</h1>
 <form action="{% url 'edit_offer' offer.id %}" method="post">
     {% csrf_token %}
