--- a/banquetBuddy/catering_particular/templates/catering_detail.html
+++ b/banquetBuddy/catering_particular/templates/catering_detail.html
@@ -6,7 +6,7 @@
   <p><strong>Capacidad:</strong> {{ catering.capacity }}</p>
   <p><strong>Precio:</strong> {{ catering.price }}</p>
   {% if catering.cateringcompany.logo %}
-      <img src="data:image/png;base64,{{ catering.cateringcompany.logo }}" class="img-fluid" alt="Logo">
+      <img src="{{ catering.cateringcompany.logo.url }}" class="img-fluid" alt="Logo">
   {% endif %}
   {% if is_particular %}
       <a href="{% url 'add_review' catering.id %}" class="btn btn-primary">Add Review</a>
