--- a/banquetBuddy/core/templates/core/contact.html
+++ b/banquetBuddy/core/templates/core/contact.html
@@ -39,7 +39,6 @@
     }
     
     .contact-info .info ul li a {
-        color: #000000;
         font-size: 1.2em;
     }
     
@@ -63,19 +62,20 @@
     </style>
 
     <div class="header">
-        <h1>Información de contacto</h1>
+        <h1>Contact information</h1>
     </div>
     <div class="background">
         <div class="container">
             <div class="info">
+                <hr/>
                 <ul>
-                    <h2>Ubicación:</h2>
+                    <h2>Address:</h2>
                     <p>Av. de la Reina Mercedes, 41012 Sevilla, España</p>
-                    <li><a href="https://maps.app.goo.gl/MyKcMp62qkBrG1jG8" target="_blank">Ver en mapa</a></li><br>
+                    <li><a href="https://maps.app.goo.gl/MyKcMp62qkBrG1jG8" target="_blank">See on map</a></li><br>
                     <h2>Email:</h2>
                     <li><a href="mailto:banquetbuddyoficial@gmail.com">banquetbuddyoficial@gmail.com</a></li><br>
-                    <p>Nos esforzamos en responder las consultas en el menor tiempo posible.</p>
-                    <p>Gracias por su colaboración.</p>
+                    <p>We strive to respond to messages in the shortest time possible.</p>
+                    <p>Thanks for your understanding.</p>
                 </ul>
             </div>
             <div class="image">
