--- a/banquetBuddy/core/templates/core/error_report.html
+++ b/banquetBuddy/core/templates/core/error_report.html
@@ -36,8 +36,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="error-report-container"> 
+        <div class="error-report-container mb-4"> 
         <h2>Report Error</h2>
+        <hr/>
         <form method="post">
             {% csrf_token %}
             <!-- Name -->
