--- a/banquetBuddy/core/templates/core/previous_terms.html
+++ b/banquetBuddy/core/templates/core/previous_terms.html
@@ -1,9 +1,9 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <div class="container">
-    <h1>Archivo de Terminos y condiciones</h1>
+    <h1>Terms and Conditions Archive </h1>
     <ul>
-        <li><a href="{% url 'terms_version1_0' %}"> Versión 1.0 - Vigente 26/03/2024 - 08/04/2024 </a></li>
+        <li><a href="{% url 'terms_version1_0' %}"> Version 1.0 - Effective 26/03/2024 - 08/04/2024 </a></li>
     </ul>
 </div>
 {% endblock %}
