--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -97,7 +97,7 @@
             {% if price_plan == "BASE" %}
             <div class="plan-btn" style="margin-top:30% ;">
                 <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
-                        class="text-decoration-none text-light">Cancelar subscripción</a></button>
+                        class="text-decoration-none text-light">Cancel subscription</a></button>
             </div>
             {% elif price_plan == "PREMIUM_PRO" or price_plan == "PREMIUM"%}
 
@@ -132,7 +132,7 @@
             {% if price_plan == "PREMIUM" %}
             <div class="plan-btn" style="margin-top:20% ;">
                 <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
-                        class="text-decoration-none text-light">Cancelar subscripción</a></button>
+                        class="text-decoration-none text-light">Cancel subscription</a></button>
             </div>
             {%elif price_plan == "PREMIUM_PRO"%}
 
@@ -168,7 +168,7 @@
             {% if price_plan == "PREMIUM_PRO" %}
             <div class="plan-btn" style="margin-top:15% ;">
                 <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
-                        class="text-decoration-none text-light">Cancelar subscripción</a></button>
+                        class="text-decoration-none text-light">Cancel subscription</a></button>
             </div>
             {%else%}
             <div class="plan-btn" style="margin-top:20% ;">
