--- a/banquetBuddy/catering_owners/templates/chat.html
+++ b/banquetBuddy/catering_owners/templates/chat.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col d-flex justify-content-end align-items-center">
                 <a href="{% url 'chat' id %}">
-                    <button class="btn btn-success" type="button" id="recargar" style="background-color: #02483e;">Actualizar Chat</button>
+                    <button class="btn btn-success" type="button" id="recargar" style="background-color: #02483e;">Refresh Chat</button>
                 </a>                
             </div>
         </div>
