--- a/banquetBuddy/core/templates/core/activation_email.html
+++ b/banquetBuddy/core/templates/core/activation_email.html
@@ -1,9 +1,9 @@
 {% autoescape off %}
-Hello {{ user.username }},
+Hello {{ user.username|safe }},
 
-Thank you for registering on our website. Please click on the link below to activate your account:
+Thank you for registering on our website. Please click the following link to activate your account and log in:
 
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+http://{{ domain|safe }}{% url 'activate' uidb64=uid token=token %}
 
 If you did not request this email, please ignore it.
 
