--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -101,17 +101,6 @@
                         <span class="notifications_not_read">{{ notification_number }}</span>
                     </a>
                     </div>
-                    <form class="form-inline my-2 my-lg-0">
-                        <a href="{% url 'logout' %}" class="btn btn-outline-danger my-2 my-sm-0">Log out</a>
-                    </form>
-                {% endif %}
-                <form class="form-inline my-2 my-lg-0" style="position: relative;">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="search-icon">
-                        <i class="fas fa-search"></i>
-                    </button>
-                    <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                </form>
-                {% if request.user.is_authenticated %}
                     {% if request.user.ParticularUsername %}
                         {% comment %} <a class="nav-link" href="{% url 'my_books' %}">My Books</a> {% endcomment %}
                         <a href="{% url 'profile' %}" class="text-decoration-none">
@@ -131,6 +120,9 @@
                         {{ user.username }}
                         </a>
                     {% endif %}
+                    <form class="form-inline my-2 my-lg-0 ml-4">
+                        <a href="{% url 'logout' %}" class="btn btn-outline-danger my-2 my-sm-0">Log out</a>
+                    </form>
                 {% endif %}
             </div>
             
@@ -171,7 +163,7 @@
                     </a>
                 </div>
 
-                            <!-- Columna para Política de Privacidad -->
+            <!-- Columna para Política de Privacidad -->
             <div class="col text-center">
                 <a href="{% url 'privacy_policy' %}" class="text-decoration-none">
                     <p class="text-white text-lg">Privacy</p>
