--- a/banquetBuddy/catering_particular/templates/my_books.html
+++ b/banquetBuddy/catering_particular/templates/my_books.html
@@ -4,15 +4,19 @@
 {% block content %}
 
 <div class="container mt-4">
-    <h1 class="mb-4">My books</h1>
-    <div class="row">
-        {% for event in events %}
-        <div class="col-md-6">
-            <div class="card mb-4">
+    <header class="text-center mb-4">
+        <h1>My books</h1>
+        <p>Find and manage your events</p>
+    </header>
+    {% for event in events %}
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <div class="card rounded shadow">
                 <div class="card-body">
-                    <h5 class="card-title">{{ event.name }}</h5>
-                    <p class="card-text">{{ event.date }}</p>
+                    <h3 class="card-title">{{ event.name }}</h3>
+                    <h6 class="card-text">{{ event.date }}</h6>
                     <p class="card-text">{{ event.details }}</p>
+                    <img src="/banquetBuddy/media/{{ event.cateringcompany.logo }}"></img>
                     <div class="row">
                         <div class="col-md-8">
                             <p class="{% if event.booking_state == 'CONTRACT_PENDING' %}text-warning{% elif event.booking_state == 'CANCELLED' %}text-danger{% elif event.booking_state == 'CONFIRMED' %}text-success{% endif %}">
@@ -35,8 +39,8 @@
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
+    {% endfor %}
 </div>
 
 {% for event in events %}
