feature:added visual tests for user register

--- a/banquetBuddy/core/templates/core/elegir_registro.html
+++ b/banquetBuddy/core/templates/core/elegir_registro.html
@@ -74,7 +74,7 @@
                 <p>Search</p>
                 <p>Compare</p>
                 <p>Hire</p>
-                <a href="/caterings/register_particular" class="btn">Sign Up</a>
+                <a href="/caterings/register_particular" class="btn" id="register_particular_button">Sign Up</a>
             </div>
         </div>
         <div class="col-md-4">
@@ -83,7 +83,7 @@
                 <p>Create a profile</p>
                 <p>Search opportunities</p>
                 <p>Apply for jobs</p>
-                <a href="/register_employee" class="btn">Sign Up</a>
+                <a href="/register_employee" class="btn" id="register_employee_button">Sign Up</a>
             </div>
         </div>
         <div class="col-md-4 last-container"> <!-- Aplicando la clase last-container al último contenedor -->
@@ -92,7 +92,7 @@
                 <p>Promote your service</p>
                 <p>Manage</p>
                 <p>Hire Workers</p>
-                <a href="/register_company" class="btn">Sign Up</a>
+                <a href="/register_company" class="btn" id="register_company_button">Sign Up</a>
             </div>
         </div>
     </div>
