--- a/banquetBuddy/catering_owners/templates/manage_tasks.html
+++ b/banquetBuddy/catering_owners/templates/manage_tasks.html
@@ -4,91 +4,152 @@
 {% block content %}
 <style>
     /* Estilos generales para el tablero Kanban */
-.kanban-board {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-}
+    .kanban-board {
+        display: flex;
+        justify-content: space-around;
+        padding: 20px;
+    }
 
-/* Estilos para cada columna del Kanban */
-.kanban-column {
-    width: 30%;
-    min-height: 300px;
-    background-color: #f4f4f4;
-    margin: 0 10px;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
+    /* Estilos para cada columna del Kanban */
+    .kanban-column {
+        width: 30%;
+        min-height: 300px;
+        background-color: #f4f4f4;
+        margin: 0 10px;
+        border-radius: 5px;
+        padding: 10px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
 
-.kanban-column h2 {
-    text-align: center;
-    color: #333;
-}
+    .kanban-column h2 {
+        text-align: center;
+        color: #333;
+    }
 
-/* Estilos para las tareas dentro de las columnas */
-.task {
-    padding: 10px;
-    background-color: white;
-    border: 1px solid #ddd;
-    margin-bottom: 10px;
-    border-radius: 3px;
-    cursor: pointer; /* Indica que la tarea es arrastrable */
-    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-}
+    /* Estilos para las tareas dentro de las columnas */
+    .task {
+        padding: 10px;
+        background-color: white;
+        border: 1px solid #ddd;
+        margin-bottom: 10px;
+        border-radius: 3px;
+        cursor: pointer; /* Indica que la tarea es arrastrable */
+        box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    }
 
-.task:hover {
-    border-color: #aaa;
-}
+    .task:hover {
+        border-color: #aaa;
+    }
 
-/* Estilo para la tarea mientras se arrastra */
-.task[draggable="true"]:active {
-    opacity: 0.5;
-}
+    /* Estilo para la tarea mientras se arrastra */
+    .task[draggable="true"]:active {
+        opacity: 0.5;
+    }
 
+    /* Estilos para los detalles de la tarea */
+    .task-details {
+        margin-top: 10px;
+        font-size: 0.9em;
+    }
+
+    .priority-low { background-color: #ccffcc; } /* Verde claro para baja prioridad */
+    .priority-medium { background-color: #ffff99; } /* Amarillo para media prioridad */
+    .priority-high { background-color: #ffcccc; } /* Rojo claro para alta prioridad */
 </style>
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-danger" role="alert">{{ message }}</div>
+{% endfor %}
+{% endif %}
 
 <h1>Manage Tasks for {{ event.name }}</h1>
 
-    <div class="kanban-board">
-        <div class="kanban-column pending" data-state="PENDING">
-            <h2>Pending</h2>
-            <div class="tasks">
-                {% for task in tasks %}
-                    {% if task.assignment_state == 'PENDING' %}
-                        <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                            <p>{{ task.description }}</p>
-                        </div>
-                    {% endif %}
-                {% endfor %}
+<div class="kanban-board">
+    <div class="kanban-column pending" data-state="PENDING">
+        <h2>Pending</h2>
+        <div class="tasks">
+            {% for task in tasks %}
+            {% if task.assignment_state == 'PENDING' %}
+            <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                <p>{{ task.description }}</p>
+                <div class="task-details">
+                    Assigned to: 
+                    {% with employees=task.employees.all %}
+                        {% if employees %}
+                            {% for employee in employees %}
+                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            Not assigned
+                        {% endif %}
+                    {% endwith %}
+                    <br>
+                                Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+                </div>
             </div>
-        </div>
-        <div class="kanban-column in_progress" data-state="IN_PROGRESS">
-            <h2>In Progress</h2>
-            <div class="tasks">
-                {% for task in tasks %}
-                    {% if task.assignment_state == 'IN_PROGRESS' %}
-                        <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                            <p>{{ task.description }}</p>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-        
-        <div class="kanban-column completed" data-state="COMPLETED">
-            <h2>Completed</h2>
-            <div class="tasks">
-                {% for task in tasks %}
-                    {% if task.assignment_state == 'COMPLETED' %}
-                        <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                            <p>{{ task.description }}</p>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
+    <div class="kanban-column in_progress" data-state="IN_PROGRESS">
+        <h2>In Progress</h2>
+        <div class="tasks">
+            {% for task in tasks %}
+            {% if task.assignment_state == 'IN_PROGRESS' %}
+            <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                <p>{{ task.description }}</p>
+                <div class="task-details">
+                    Assigned to: 
+                    {% with employees=task.employees.all %}
+                        {% if employees %}
+                            {% for employee in employees %}
+                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            Not assigned
+                        {% endif %}
+                    {% endwith %}
+                    <br> 
+                        Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+    <div class="kanban-column completed" data-state="COMPLETED">
+        <h2>Completed</h2>
+        <div class="tasks">
+            {% for task in tasks %}
+            {% if task.assignment_state == 'COMPLETED' %}
+            <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                <p>{{ task.description }}</p>
+                <div class="task-details">
+                    Assigned to: 
+                    {% with employees=task.employees.all %}
+                        {% if employees %}
+                            {% for employee in employees %}
+                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            Not assigned
+                        {% endif %}
+                    {% endwith %}
+                    <br>
+                                        Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+</div>
 
 <!-- Formulario para añadir nuevas tareas -->
 <div class="add-task-form">
@@ -98,11 +159,15 @@
         <input type="text" name="description" placeholder="Task Description" required>
         <input type="date" name="assignment_date" required>
         <input type="date" name="expiration_date" required>
-        <select name="employee" required>
+        <div class="form-group">
+            <label for="employees">Assign Employees:</label>
+            <br>
             {% for employee in active_employees %}
-                <option value="{{ employee.user.id }}">{{ employee.profession }} - {{ employee.user.username }}</option>
+                <input type="checkbox" name="employees" id="employee{{ employee.user.id }}" value="{{ employee.user.id }}">
+                <label for="employee{{ employee.user.id }}">{{ employee.profession }} - {{ employee.user.username }}</label><br>
             {% endfor %}
-        </select>
+        </div>
+
         <div class="form-group">
             <label for="priority">Priority:</label>
             <select name="priority" id="priority" required>
@@ -111,10 +176,9 @@
                 <option value="HIGH">High</option>
             </select>
         </div>
-        
-                        <button type="submit">Add Task</button>
+        <button type="submit">Add Task</button>
     </form>
-    </div>
-    
-    <script src="{% static 'core/kanban.js' %}"></script>
+</div>
+
+<script src="{% static 'core/kanban.js' %}"></script>
 {% endblock %}
