--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -92,7 +92,7 @@
                         <a class="nav-link" href="{% url 'listar_caterings_companies_employee' %}">Chats</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'list_catering_services_employee' %}">Job history</a>
+                        <a class="nav-link" href="{% url 'list_catering_services_employee' %}">My Jobs</a>
                     </li>
                     {% endif %}
                 </ul>
