--- a/banquetBuddy/catering_employees/templates/employee_kanban.html
+++ b/banquetBuddy/catering_employees/templates/employee_kanban.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<meta name="csrf-token" content="{{ csrf_token }}">
+
 <style>
     /* Estilos generales para el tablero Kanban */
     .kanban-board {
@@ -104,12 +106,7 @@
                     Due: {{ task.expiration_date|date:"Y-m-d" }}
                 </div>
 
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
+                
                 
             </div>
             {% endif %}
@@ -140,13 +137,7 @@
                     Due: {{ task.expiration_date|date:"Y-m-d" }}
                 </div>
 
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-        
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
+                
                 
                 
             </div>
@@ -178,13 +169,7 @@
                     Due: {{ task.expiration_date|date:"Y-m-d" }}
                 </div>
 
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-        
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
+                
                
                 
             </div>
@@ -193,99 +178,6 @@
         </div>
     </div>
 </div>
-
-    <!-- formulario de añadir tarea -->
-
-
-
-    <div class="container mt-4">
-        <!-- Botón para desplegar el formulario de añadir tarea -->
-        <button id="toggleAddTaskBtn" class="btn btn-primary">
-            Add Task +
-        </button>
-    
-        <!-- Formulario desplegable, inicialmente oculto -->
-        <div id="addTaskForm" style="display: none;" class="card card-body mt-4">
-            <form method="post" action="{% url 'add_task' event_id=event.id %}" class="needs-validation" novalidate>
-                {% csrf_token %}
-                <div class="mb-3">
-                    <label for="description" class="form-label">Task Description</label>
-                    <input type="text" class="form-control" id="description" name="description" placeholder="Enter task description" required>
-                    <div class="invalid-feedback">
-                        Please provide a task description.
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="assignment_date" class="form-label">Assignment Date</label>
-                    <input type="date" class="form-control" id="assignment_date" name="assignment_date" required>
-                    <div class="invalid-feedback">
-                        Please choose an assignment date.
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="expiration_date" class="form-label">Expiration Date</label>
-                    <input type="date" class="form-control" id="expiration_date" name="expiration_date" required>
-                    <div class="invalid-feedback">
-                        Please choose an expiration date.
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="employees" class="form-label">Assign Employees</label>
-                    {% for employee in active_employees %}
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="employee{{ employee.user.id }}" name="employees" value="{{ employee.user.id }}">
-                        <label class="form-check-label" for="employee{{ employee.user.id }}">
-                            {{ employee.profession }} - {{ employee.user.username }}
-                        </label>
-                    </div>
-                    {% endfor %}
-                </div>
-                <div class="mb-3">
-                    <label for="priority" class="form-label">Priority</label>
-                    <select class="form-select" id="priority" name="priority" required>
-                        <option value="">Select Priority</option>
-                        <option value="LOW">Low</option>
-                        <option value="MEDIUM">Medium</option>
-                        <option value="HIGH">High</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select a priority level.
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Task</button>
-            </form>
-        </div>
-    </div>
-    
-    <script>
-        document.getElementById('toggleAddTaskBtn').addEventListener('click', function() {
-            var form = document.getElementById('addTaskForm');
-            form.style.display = form.style.display === 'block' ? 'none' : 'block';
-        });
-    </script>
-    
-
-<script src="{% static 'core/kanban.js' %}"></script>
-<!-- Modal para editar tarea -->
-<div class="modal fade" id="editTaskModal" tabindex="-1" role="dialog" aria-labelledby="editTaskModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="editTaskModalLabel">Edit Task</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- El formulario se carga aquí dinámicamente -->
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="submitEditForm()">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
+<script src="{% static 'core/kanban_employee.js' %}"></script>
 
 {% endblock %}
